--- a/style.css
+++ b/style.css
@@ -1,10 +1,34 @@
 body {
     border: 0;
-    background-color: white;
     margin: 0;
+    background-color: white;
 }
+
 canvas {
     width: 100vw;
     height: 100vh;
     display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+#content {
+    position: relative;
+    z-index: 10;
+    margin-top: 127px;
+    font-size: 23px;
+    text-align: center;
+    font-family: Monospace;
+    color: #AAAAAA;
+}
+
+#enter {
+    position: relative;
+    z-index: 10;
+    margin-top: 240px;
+    font-size: 17px;
+    text-align: center;
+    font-family: Monospace;
+    color: #AAAAAA;
 }
