--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ canvas {
     font-size: 23px;
     text-align: center;
     font-family: Monospace;
-    color: #AAAAAA;
+    color: #FFBBBB;
 }
 
 #enter {
@@ -30,5 +30,5 @@ canvas {
     font-size: 17px;
     text-align: center;
     font-family: Monospace;
-    color: #AAAAAA;
+    color: #FFBBBB;
 }
