--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ canvas {
     left: 0;
 }
 
-#content {
+#greeting {
     position: relative;
     z-index: 10;
     margin-top: 127px;
@@ -21,6 +21,7 @@ canvas {
     text-align: center;
     font-family: Monospace;
     color: #FFBBBB;
+    text-shadow: -1px -1px 0 #000;
 }
 
 #enter {
@@ -31,4 +32,5 @@ canvas {
     text-align: center;
     font-family: Monospace;
     color: #FFBBBB;
+    text-shadow: -1px -1px 0 #000;
 }
