got bg persistence across pages working (unoptimized)

--- a/_layouts/webgl.html
+++ b/_layouts/webgl.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-        <link rel="stylesheet" href="/assets/css/style.css"></link>
+        <link rel="stylesheet" href="/assets/css/style.css">
     </head>   
 
     <body>
@@ -26,5 +26,18 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha384-vk5WoKIaW/vJyUAd9n/wmopsmNhiy+L2Z+SBxGYnUkunIxVxAv/UtMOhba/xskxh" crossorigin="anonymous"></script>
     <script src="/assets/js/core.js"></script>  <!-- Load WebGL and set up RD effect -->
+
+    <script>
+{% if page.landing %}
+//warp = warp_min;
+{% else %}
+fadein = 1;
+entering = false;
+entered = true;
+warp_increasing = true;
+{% endif %}
+
+main();
+    </script>
 
 </html>
