--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@ hr {
     text-align: center;
     text-shadow: -1px -1px 0 #000;
     color: #FFBBBB;
+    display: none;
 }
 
 #enter {
@@ -46,6 +47,7 @@ hr {
     text-align: center;
     text-shadow: -1px -1px 0 #000;
     color: #FFBBBB;
+    display: none;
 }
 
 .contentbox {
