majorly lowered gl bg overhead on main pages

--- a/_layouts/webgl-intro.html
+++ b/_layouts/webgl-intro.html
@@ -9,7 +9,7 @@
     </head>   
 
     <body>
-        <canvas id="glcanvas">Oh no, canvas not supported :(</canvas>
+        <canvas class="bgcanvas" id="glcanvas">Oh no, canvas not supported :(</canvas>
         {{ content }}
     </body>
 
