--- a/_layouts/webgl-main.html
+++ b/_layouts/webgl-main.html
@@ -18,8 +18,8 @@
     </head>   
 
     <body>
-        <canvas id="glcanvas">Oh no, canvas not supported :(</canvas>
-        <canvas id="tilecanvas"></canvas>
+        <canvas id="drawcanvas">Oh no, canvas not supported :(</canvas>
+        <canvas class="bgcanvas" id="tilecanvas"></canvas>
         {{ content }}
     </body>
 
