--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,12 +6,20 @@ body {
 
 
 canvas {
-    width: 100vw;
-    height: 100vh;
     display: block;
     position: fixed;
     top: 0;
     left: 0;
+}
+
+.bgcanvas {
+    width: 100vw;
+    height: 100vh;
+}
+
+#drawcanvas {
+    width: 256px;
+    height: 256px;
 }
 
 p {
