--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,10 @@ p {
     font-family: "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+.bloghr {
+    border-top: 1px solid #777;
+}
+
 hr {
     display: block;
     height: 1px;
