--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ p {
 }
 
 .bloghr {
-    border-top: 1px solid #777;
+    border-top: 1px solid #A0A0A0;
 }
 
 hr {
@@ -114,9 +114,9 @@ blockquote {
     background-color: #E0E0E0;
     padding-top: 15px;
     padding-bottom: 15px;
-    box-shadow: 0 0 5px 5px #E0E0E0;
-    -webkit-box-shadow: 0 0 5px 5px #E0E0E0;
-    margin: 7px;
+    box-shadow: 0 0 7px 7px #E0E0E0;
+    -webkit-box-shadow: 0 0 7px 7px #E0E0E0;
+    margin: 8px;
     padding: 12px;
     color: #171717;
 }
