--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: main
 
 <div class="container contentbox">
     <div class="contents">
-        <h1 class="display-1">sohliloquies</h1>
+        <h1 class="display-1 breakword">sohliloquies</h1>
         <hr>
         <a href="/blog.html">blog</a> | <a href="/projects.html">projects</a> | <a href="/contact.html">contact</a>
         <hr>
