oh gosh. did so much. ported css -> sass, added nojs support + mode switcher, did some code cleanup

--- a/_layouts/intro.html
+++ b/_layouts/intro.html
@@ -4,12 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha384-vk5WoKIaW/vJyUAd9n/wmopsmNhiy+L2Z+SBxGYnUkunIxVxAv/UtMOhba/xskxh" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="/assets/css/style.css">
+        <link rel="stylesheet" href="/assets/css/intro.css">
         <link rel="icon" href="data:,">
-    </head>   
+    </head>
 
-    <body>
-        <canvas class="bgcanvas" id="glcanvas">Oh no, canvas not supported :(</canvas>
+    <body class="nojs">
         {{ content }}
     </body>
 
