--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,21 +3,27 @@ layout: main
 ---
 
 
-<div class="container contentbox">
-    <div class="contents">
-        <h1 class="display-1 breakword">sohliloquies</h1>
-        <hr>
-        <a href="/blog.html">blog</a> | <a href="/projects.html">projects</a> | <a href="/contact.html">contact</a>
-        <hr>
-
-        <h1>{{ page.title }}</h1>
-        <small>{{ page.date | date: "%-d %B %Y" }}</small>
-
-        <div class="blogpost my-4">
-            {{ content }}
-        </div>
-
-    </div>
-
+<div class="withjs">
+    <canvas id="drawcanvas">Oh no, canvas not supported :(</canvas>
+    <canvas id="tilecanvas"></canvas>
 </div>
 
+
+<div class="contentbox contents">
+    <h1 class="display-1 breakword">sohliloquies</h1>
+    <hr>
+    <div class="overflow-hidden">
+        <span>
+            <a href="/blog.html">blog</a> | <a href="/projects.html">projects</a> | <a href="/contact.html">contact</a>
+        </span>
+        {% include switcher.html %}
+    </div>
+    <hr>
+
+    <h1>{{ page.title }}</h1>
+    <small>{{ page.date | date: "%-d %B %Y" }}</small>
+
+    <div class="blogpost my-4">
+        {{ content }}
+    </div>
+</div>
