--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -18,7 +18,7 @@
         <!-- -->
 
         <!-- custom styles -->
-        <link rel="stylesheet" href="/assets/css/style.css">
+        <link rel="stylesheet" href="/assets/css/main.css">
         <link rel="icon" href="data:,">
     </head>
 
