--- a/assets/css/intro.sass
+++ b/assets/css/intro.sass
@@ -24,7 +24,7 @@ body
 
 p
   font-size: 17px
-  font-family: "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
+  font-family: "Libre Baskerville", sans-serif
 
 
 canvas
