--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -104,8 +104,8 @@ canvas
 
 
 p
-  font-size: 17px
-  font-family: "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
+  font-size: 16px
+  font-family: Helvetica,sans-serif
 
 
 .contentbox
@@ -120,7 +120,7 @@ p
 
 .contents
   color: #858585
-  font-family: Monospace
+  font-family: 'Roboto Mono', monospace
 
 
 blockquote
