cleaned up templating & added nojs mathjax warning

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -25,7 +25,13 @@
 
     </head>
 
-    <body class="nojs">
+    <body class="nojs nofancy">
+
+        <div class="fancy">
+            <canvas id="drawcanvas">Oh no, canvas not supported :(</canvas>
+            <canvas id="tilecanvas"></canvas>
+        </div>
+
         {{ content }}
     </body>
 
