--- a/_includes/switcher.html
+++ b/_includes/switcher.html
@@ -1,7 +1,7 @@
-<span class="withjs float-right">
-    fancy | <a onClick="disableJS();" href="#">simple</a>
+<span class="fancy float-right">
+    fancy | <a onClick="disableFancy();" href="#">simple</a>
 </span>
 
-<span class="withoutjs float-right">
-    <a onClick="enableJS(); return false;" href="#">fancy</a> | simple
+<span class="simple float-right">
+    <a onClick="enableFancy(); return false;" href="#">fancy</a> | simple
 </span>
