--- a/_layouts/intro.html
+++ b/_layouts/intro.html
@@ -8,7 +8,7 @@
         <link rel="icon" href="data:,">
     </head>
 
-    <body class="nojs">
+    <body class="nojs nofancy">
         {{ content }}
     </body>
 
