reworked bg animation: moved params to jquery animations, cleaned up code (TODO: fine-tune transitions)

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -28,7 +28,7 @@
     <body class="nojs nofancy">
 
         <div class="fancy">
-            <canvas id="drawcanvas">Oh no, canvas not supported :(</canvas>
+            <canvas id="glcanvas">Oh no, canvas not supported :(</canvas>
             <canvas id="tilecanvas"></canvas>
         </div>
 
