--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,9 @@ layout: main
 
     <h1 class="mb-0">{{ page.title }}</h1>
     <small>{{ page.date | date: "%-d %B %Y" }}</small>
+    {% if page.tags.size > 0 %}
+    <br><small>{% include taglist.html %}</small>
+    {% endif %}
 
     {% if page.mathjax %}
     <div class="alert alert-warning withoutjs my-3" role="alert">
