projects page rough draft

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -189,3 +189,20 @@ blockquote
 
   &:hover
     text-decoration: underline
+
+
+.display-none
+  display: none
+
+
+.project-row
+  position: relative
+  margin-bottom: 0px
+  padding-bottom: 8px
+
+  &:hover
+    text-decoration: underline
+
+  span
+    position: absolute
+    right: 0px
