set up code highlighting

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -2,6 +2,9 @@
 ---
 
 
+@import "friendly.css"
+
+
 =keyframes($name)
   @-webkit-keyframes #{$name}
     @content
@@ -100,6 +103,11 @@ h2 a
 img
   vertical-align: middle
   border-style: none
+
+
+.img-center
+  margin: 0 auto
+  display: block
 
 
 .img-fluid
