force simple mode on mobile + minor sass cleanup

--- a/_includes/switcher.html
+++ b/_includes/switcher.html
@@ -1,7 +1,9 @@
-<span class="fancy float-right">
-    fancy | <a onClick="disableFancy();" href="#">simple</a>
-</span>
+<span id="fancy-toggler">
+    <span class="fancy float-right">
+        fancy | <a onClick="disableFancy();" href="#">simple</a>
+    </span>
 
-<span class="simple float-right">
-    <a onClick="enableFancy(); return false;" href="#">fancy</a> | simple
+    <span class="simple float-right">
+        <a onClick="enableFancy(); return false;" href="#">fancy</a> | simple
+    </span>
 </span>
