--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -5,6 +5,9 @@
 @import "friendly.css"
 
 
+$small: 768px
+
+
 =keyframes($name)
   @-webkit-keyframes #{$name}
     @content
@@ -25,6 +28,56 @@
     opacity: 1
 
 
+=simplebody
+  animation-duration: 0.7s
+  animation-name: fade-opacity-in
+
+  .fancy
+    display: none
+  .simple
+    display: block
+
+
+=fancybody
+  background-color: black
+
+  .fancy
+    display: block
+  .simple
+    display: none
+
+  .contentbox
+    z-index: 10
+    background-color: #000000
+    opacity: 0.90
+    display: none
+    margin-bottom: 100vh
+
+  a
+    color: #BBBBBB
+    &:hover
+      color: #343434
+
+  .blogpost
+    margin: 6px
+    padding: 14px
+    background-color: #E0E0E0
+    padding-top: 15px
+    padding-bottom: 15px
+    box-shadow: 0 0 7px 7px #E0E0E0
+    -webkit-box-shadow: 0 0 7px 7px #E0E0E0
+
+    a
+      color: #515151
+
+      hr
+        border-top: 1px solid #A0A0A0
+
+      & > p > a
+        text-decoration: underline
+
+
+
 body
   border: 0
   margin: 0
@@ -39,53 +92,16 @@ body
     .withoutjs
       display: none
 
-  &.nofancy
-    animation-duration: 0.7s
-    animation-name: fade-opacity-in
-
-    .fancy
-      display: none
-    .simple
-      display: block
-
-
-  &:not(.nofancy)
-    background-color: black
-
-    .fancy
-      display: block
-    .simple
+  @media (max-width: $small)
+    +simplebody
+    #fancy-toggler
       display: none
 
-    .contentbox
-      z-index: 10
-      background-color: #000000
-      opacity: 0.90
-      display: none
-      margin-bottom: 100vh
-
-    a
-      color: #BBBBBB
-      &:hover
-        color: #343434
-
-    .blogpost
-      margin: 6px
-      padding: 14px
-      background-color: #E0E0E0
-      padding-top: 15px
-      padding-bottom: 15px
-      box-shadow: 0 0 7px 7px #E0E0E0
-      -webkit-box-shadow: 0 0 7px 7px #E0E0E0
-
-      a
-        color: #515151
-
-        hr
-          border-top: 1px solid #A0A0A0
-
-        & > p > a
-          text-decoration: underline
+  @media (min-width: $small)
+    &.nofancy
+      +simplebody
+    &:not(.nofancy)
+      +fancybody
 
 
 h2 a
