center-align nav links when fancy picker is hidden

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: main
 <div class="contentbox contents">
     <h1 class="display-1 breakword">sohliloquies</h1>
     <hr>
-    <div class="overflow-hidden">
+    <div class="overflow-hidden" id="navlinks">
         <span>
             <a href="/blog.html">blog</a> | <a href="/projects.html">projects</a> | <a href="/contact.html">contact</a>
         </span>
