--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -94,6 +94,9 @@ body
 
   @media (max-width: $small)
     +simplebody
+
+    #navlinks
+      text-align: center
     #fancy-toggler
       display: none
 
