added <wbr> tags in page titles & adjusted breakpt

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: main
 
 
 <div class="contentbox contents">
-    <h1 class="display-1 breakword">sohliloquies</h1>
+    <h1 class="display-1 breakword">sohl<wbr>il<wbr>oq<wbr>uies</h1>
     <hr>
     <div class="overflow-hidden" id="navlinks">
         <span>
