prefer simplicity over fanciness

--- a/_includes/switcher.html
+++ b/_includes/switcher.html
@@ -1,9 +1,9 @@
 <span id="fancy-toggler">
     <span class="fancy float-right">
-        fancy | <a onClick="disableFancy();" href="#">simple</a>
+        <a onClick="disableFancy();" href="#">simple</a> | fancy
     </span>
 
     <span class="simple float-right">
-        <a onClick="enableFancy(); return false;" href="#">fancy</a> | simple
+        simple | <a onClick="enableFancy(); return false;" href="#">fancy</a>
     </span>
 </span>
