--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,3 +1,7 @@
+---
+---
+
+
 <!doctype html>
 <html lang="en">
     <head>
@@ -21,6 +25,8 @@
         <link rel="stylesheet" href="/assets/font/font.css" type="text/css" charset="utf-8">
         <link rel="stylesheet" href="/assets/css/main.css">
         <link rel="icon" href="data:,">
+
+        {% seo %}
 
 
     </head>
