--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -107,6 +107,17 @@ body
       +fancybody
 
 
+.gif-preview
+  position: absolute
+  margin-left: auto
+  margin-right: auto
+  left: 0
+  right: 0
+
+  &:hover
+    opacity: 0
+
+
 h2 a
   color: #AAAAAA
 
