made blog post image wrappers fluid

--- a/_includes/blog-gif.html
+++ b/_includes/blog-gif.html
@@ -1,4 +1,4 @@
-<a href="{{ include.png }}">
-    <img class="gif-preview" src="{{ include.name }}.png">
-    <img class="img-center" src="{{ include.name }}.gif">
+<a href="{{ include.name }}.gif">
+    <img class="gif-preview img-fluid" src="{{ include.name }}.png">
+    <img class="img-center img-fluid" src="{{ include.name }}.gif">
 </a>
