fixed responsive gif previews

--- a/_includes/blog-gif.html
+++ b/_includes/blog-gif.html
@@ -1,4 +1,6 @@
-<a href="{{ include.name }}.gif">
-    <img class="gif-preview img-fluid" src="{{ include.name }}.png">
-    <img class="img-center img-fluid" src="{{ include.name }}.gif">
-</a>
+<p class="pos-relative">
+    <a href="{{ include.name }}.gif">
+        <img class="gif-preview img-fluid" src="{{ include.name }}.png">
+        <img class="img-center img-fluid" src="{{ include.name }}.gif">
+    </a>
+</p>
