basic table styles

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -125,6 +125,15 @@ h2 a
 .blogpost
   color: #171717
 
+  table
+    margin-left: auto
+    margin-right: auto
+    margin-bottom: 1rem
+
+    th, td
+      padding: 10px
+      border: 1px solid black
+
 
 .breakword
   word-wrap: break-word
