lots of work on Sybil Defense post

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -26,6 +26,9 @@
         <link rel="stylesheet" href="/assets/css/main.css">
         <link rel="icon" href="data:,">
 
+        <!-- custom helper function -->
+        <script> function do_toggle(div_id) { $(div_id).toggle({duration: 340, easing: 'linear'}); } </script>
+
         {% seo %}
 
 
