--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -256,3 +256,10 @@ blockquote
   span
     position: absolute
     right: 0px
+
+
+svg
+  display: block
+  margin: auto
+  margin-top: 1rem
+  margin-bottom: 1rem
