fixed sass deprecation warnings

--- a/assets/css/intro.sass
+++ b/assets/css/intro.sass
@@ -90,7 +90,7 @@ canvas
   margin-top: 127px
   font-size: 27px
   text-align: center
-  text-shadow: -1px -1px 0 #000
+  text-shadow: -1px (-1px) 0 #000
   color: #FFFFFF
   display: none
 
@@ -101,8 +101,8 @@ canvas
   margin-top: 240px
   font-size: 27px
   text-align: center
-  text-shadow: -1px -1px 0 #000
-  text-shadow: +1px +1px 0 #000
+  text-shadow: -1px (-1px) 0 #000
+  text-shadow: +1px (+1px) 0 #000
   color: #FFFFFF
   display: none
 
