--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -232,8 +232,8 @@ blockquote
   margin-top: 240px
   font-size: 27px
   text-align: center
-  text-shadow: -1px -1px 0 #000
-  text-shadow: +1px +1px 0 #000
+  text-shadow: -1px (-1px) 0 #000
+  text-shadow: +1px (+1px) 0 #000
   color: #FFFFFF
   display: none
 
