fixed post navlinks

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,12 +6,7 @@ layout: main
 <div class="contentbox contents">
     <h1 class="display-1 breakword">sohl<wbr>il<wbr>oq<wbr>uies</h1>
     <hr>
-    <div class="overflow-hidden" id="navlinks">
-        <span>
-            <a href="/blog.html">blog</a> | <a href="/projects.html">projects</a> | <a href="/contact.html">contact</a>
-        </span>
-        {% include switcher.html %}
-    </div>
+    {% include navlinks.html %}
     <hr>
 
     <h1 class="mb-0">{{ page.title }}</h1>
